fix: rounded corners on mobile submit buttom on contact form

--- a/src/containers/Contact/Contact.css
+++ b/src/containers/Contact/Contact.css
@@ -50,7 +50,9 @@
 }
 
 .contact-send-form {
-  border-radius: 0;
+  border-radius: 0px;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0px;
   background-color: #00b4ff;
   padding: 10px 40px 10px 40px;
   border: solid 1px #00b4ff;
